# CDCL-sat-solver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
benchmarks/: README.md  _common.py  ablation.py  minimize_study.py  plot.py  results_ablation.json  results_minimize.json  results_scaling.json  scaling.py
examples/: petersen.edges
satsolver/: __init__.py  __main__.py  cardinality.py  cli.py  demo.py  dimacs.py  mus.py  preprocess.py  solver.py
satsolver/encoders/: __init__.py  coloring.py  pigeonhole.py  queens.py  sudoku.py
tests/: test_assumptions.py  test_brute_force_equivalence.py  test_cardinality.py  test_deletion.py  test_dimacs.py  test_drat.py  test_encoders.py  test_incremental.py  test_minimize.py  test_mus.py  test_preprocess.py  test_solver_basics.py
web/: README.md  index.html
